--- a/package.json
+++ b/package.json
@@ -15,17 +15,23 @@
     "serve": "set NODE_OPTIONS=\"--openssl-legacy-provider\" & npm run dev\n"
   },
   "dependencies": {
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "echarts": "^4.9.0",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "promise-queue-plus": "^1.2.2",
     "spark-md5": "^3.0.2",
     "vue": "2.6.10",
+    "vue-echarts": "^4.1.0",
     "vue-router": "3.0.6",
-    "promise-queue-plus": "^1.2.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
