--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "serve": "set NODE_OPTIONS=\"--openssl-legacy-provider\" & npm run dev\n"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.7.1",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "0.18.1",
     "core-js": "3.6.5",
-    "echarts": "^4.9.0",
+    "echarts": "^5.4.2",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "less": "^3.9.0",
@@ -29,8 +30,8 @@
     "path-to-regexp": "2.4.0",
     "promise-queue-plus": "^1.2.2",
     "spark-md5": "^3.0.2",
-    "vue": "2.6.10",
-    "vue-echarts": "^4.1.0",
+    "vue": "2.6.14",
+    "vue-echarts": "^6.5.4",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
@@ -57,7 +58,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.14"
   },
   "browserslist": [
     "> 1%",
